ui: fixes spacing and alignment issues

--- a/src/styles/partials/_materialCard.scss
+++ b/src/styles/partials/_materialCard.scss
@@ -51,7 +51,7 @@
     @include font;
     width: 6.8125rem;
     height: 1rem;
-    margin-top: -0.5rem;
+    margin-top: -0.25rem;
     font-size: 0.8125rem;
     line-height: 0.9375rem;
     color: rgba($font-color, 0.4);
