--- a/src/styles/partials/_notificationCard.scss
+++ b/src/styles/partials/_notificationCard.scss
@@ -1,10 +1,12 @@
 .notifications-- {
   &card {
     position: relative;
-    width: 22rem;
-    height: 33.33%;
-    left: 0;
-    top: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
     border-radius: 0.125rem 0.125rem 0rem 0rem;
     border-bottom: 0.0625rem rgba($primary, 0.3);
   }
@@ -14,40 +16,16 @@
   }
   &card- {
     &description {
-      position: absolute;
-      width: 16.0625rem;
-      height: 1.75rem;
-      left: 1rem;
-      top: 1.125rem;
-      font-family: $font;
-      font-style: normal;
-      font-weight: normal;
+      @include font;
+      width: 14.0625rem;
+      padding-left: 0.5rem;
       font-size: 0.75rem;
       line-height: 0.875rem;
-      color: $font-color;
-    }
-    &date {
-      position: absolute;
-      width: 2.75rem;
-      height: 0.8125rem;
-      right: 0.5625rem;
-      top: 0.75rem;
-      font-family: $font;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 0.6875rem;
-      line-height: 0.8125rem;
-      color: rgba($black, 0.5);
     }
     &page {
-      position: absolute;
-      width: 3.3125rem;
-      height: 0.8125rem;
-      right: 1.0625rem;
-      top: 0.375rem;
-      font-family: $font;
-      font-style: normal;
-      font-weight: normal;
+      @include font;
+      align-self: center;
+      width: 4.3125rem;
       font-size: 0.6875rem;
       line-height: 0.8125rem;
       color: rgba($font-color, 0.2);
